[metadata]
name = fastluks
version = 0.0.18
author = Daniele Colombo
author_email = daniele.colombo39@gmail.com
description = Storage encryption through LUKS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dacolombo/fast-luks-py
project_urls =
    Bug Tracker = https://github.com/dacolombo/fast-luks-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
scripts = bin/fastluks_main_script.py
python_requires = >=3.6
install_requires =
    zc.lockfile
    requests
    urllib3

[options.packages.find]
where = src