[metadata]
name = fastluks
version = 0.0.31
author = Daniele Colombo
author_email = daniele.colombo39@gmail.com
description = Storage encryption through LUKS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dacolombo/fast-luks-py
project_urls =
    Bug Tracker = https://github.com/dacolombo/fast-luks-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
scripts = 
    bin/fastluks
    bin/luksctl
    bin/luksctl_api
python_requires = >=3.6
install_requires =
    zc.lockfile==2.0
    hvac==0.11.2
    distro==1.3.0
    flask==2.0.0
    gunicorn==20.1.0

[options.packages.find]
where = src